--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     ></script>
 
     <div class="container mt-3">
-      <h1>Microsite</h1>
+      <h1>Sofia Mosina</h1>
 
       <ul class="nav nav-pills mt-3 mb-3" id="menu">
         <li class="nav-item">
