--- a/about.html
+++ b/about.html
@@ -5,4 +5,4 @@ my goal is to create meaningful experiences while helping meet your business goa
 </p>
 <p><strong>currently open for new projects!</strong></p>
 <div id="contact_button">
-<a href="#content_contact">contact me</a></div>
+<a href="#contact.html">contact me</a></div>
