--- a/about.html
+++ b/about.html
@@ -1,8 +1,10 @@
-<h2>hey, i'm sofia! 👋 </h2>
-<p>i am an interaction designer with unique sense of aesthetics and extreme attention to detail.</p>
+<h2>hey, i'm sofia! 👋</h2>
 <p>
-my goal is to create meaningful experiences while helping meet your business goals and your users' needs.
+  i am an interaction designer with unique sense of aesthetics and extreme
+  attention to detail.
+</p>
+<p>
+  my goal is to create meaningful experiences while helping meet your business
+  goals and your users' needs.
 </p>
 <p><strong>currently open for new projects!</strong></p>
-<div id="contact_button">
-<a href="#contact.html">contact me</a></div>
